<resources>
    <string name="app_name">LocationsUniritter</string>
    <string name="texto_botao">Login</string>
    <string name="salvar_posi_o">Salvar Posição</string>
    <string name="ver_ultimas_posi_es">Ver ultimas posições</string>
    <string name="suas_ltimas_posi_es">Suas últimas posições</string>
    <string name="pos1">pos1</string>
    <string name="datapos1">datapos1</string>
    <string name="pos2">pos2</string>
    <string name="datapos3">datapos3</string>
    <string name="datapos4">datapos4</string>
    <string name="datapos2">datapos2</string>
    <string name="pos3">pos3</string>
    <string name="pos4">pos4</string>
    <string name="pos5">pos5</string>
    <string name="datapos5">datapos5</string>
    <string name="logout">LOGOUT</string>
</resources>
